; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_setup.c_test_merge_workdir_setup__head_invalid_oid.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_setup.c_test_merge_workdir_setup__head_invalid_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_MERGE_HEAD_FILE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"invalid-oid\0A\00", align 1
@repo = common dso_local global i32 0, align 4
@annotated_commit_foreach_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_merge_workdir_setup__head_invalid_oid() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @GIT_MERGE_HEAD_FILE, align 4
  %3 = call i32 @write_file_contents(i32 %2, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* @repo, align 4
  %5 = load i32, i32* @annotated_commit_foreach_cb, align 4
  %6 = call i32 @git_repository_mergehead_foreach(i32 %4, i32 %5, i32* null)
  store i32 %6, i32* %1, align 4
  %7 = call i32 @cl_git_fail(i32 %6)
  %8 = load i32, i32* %1, align 4
  %9 = icmp eq i32 %8, -1
  %10 = zext i1 %9 to i32
  %11 = call i32 @cl_assert(i32 %10)
  ret void
}

declare dso_local i32 @write_file_contents(i32, i8*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_repository_mergehead_foreach(i32, i32, i32*) #1

declare dso_local i32 @cl_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
